--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
-<button mat-button (click)="user ? logOut() : logIn()" [title]="user ? 'Log out' : 'Log in'">
-  <span *ngIf="!user">Log in</span>
+<button mat-button (click)="user ? logOut() : logIn()" [title]="user ? '注销' : '登录'">
+  <span *ngIf="!user">登录</span>
   <ng-container *ngIf="user">
     <img [src]="user?.avatar_url" />
     <span (click)="logOut()">{{user?.name}}</span>
