--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent" role="heading">
+<mat-toolbar color="accent" role="heading" class="mat-elevation-z8">
   <span>{{title}}</span>
   <span style="flex: 1 1 auto;"></span>
   <app-user></app-user>
