--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,72 @@
-<p>
-  list works!
-</p>
+<div class="page-box">
+  <mat-menu #handleMenu="matMenu">
+    <ng-template matMenuContent let-key="key">
+      <button routerLink="/edit/{{key.namespace}}/{{key.raw}}" mat-menu-item>
+        <mat-icon>edit</mat-icon>
+        <span>编辑</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>delete</mat-icon>
+        <span>删除</span>
+      </button>
+    </ng-template>
+  </mat-menu>
+  <div class="mat-elevation-z8">
+    <header>
+      <mat-form-field appearance="legacy" floatLabel="never">
+        <mat-label>搜索</mat-label>
+        <input [(ngModel)]="search" (ngModel)="searchChange($event)" matInput placeholder="Placeholder">
+        <button matSuffix mat-icon-button>
+          <mat-icon matSuffix>search</mat-icon>
+        </button>
+      </mat-form-field>
+      <span style="flex: 1 1 auto;"></span>
+      <mat-paginator #paginator [length]="tags.length" [pageIndex]="0" [pageSize]="50"
+        [pageSizeOptions]="[25, 50, 100, 250]">
+      </mat-paginator>
+    </header>
+    <table mat-table [dataSource]="dataSource" matSort aria-label="Elements">
+      <!-- Id Column -->
+      <ng-container matColumnDef="raw">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>原始</th>
+        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.raw | mark: search"></span></td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>名称</th>
+        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.name | mark: search"></span></td>
+      </ng-container>
+
+      <ng-container matColumnDef="intro">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
+        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.intro | mark: search"></span></td>
+      </ng-container>
+
+      <ng-container matColumnDef="namespace">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
+        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.namespace | mark: search"></span></td>
+      </ng-container>
+
+      <ng-container matColumnDef="links">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>连接</th>
+        <td mat-cell *matCellDef="let row">{{row.links}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="handle">
+        <th mat-header-cell *matHeaderCellDef style="width:48px;">操作</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button [matMenuTriggerFor]="handleMenu" [matMenuTriggerData]="{key: row}">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <div class="spinner" *ngIf="loading">
+      <mat-spinner></mat-spinner>
+    </div>
+  </div>
+</div>
