--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,21 +1,9 @@
 <div class="page-box">
-  <mat-menu #handleMenu="matMenu">
-    <ng-template matMenuContent let-key="key">
-      <button routerLink="/edit/{{key.namespace}}/{{key.raw}}" mat-menu-item>
-        <mat-icon>edit</mat-icon>
-        <span>编辑</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>delete</mat-icon>
-        <span>删除</span>
-      </button>
-    </ng-template>
-  </mat-menu>
   <div class="mat-elevation-z8">
     <header>
       <mat-form-field appearance="legacy" floatLabel="never">
         <mat-label>搜索</mat-label>
-        <input [(ngModel)]="search" (ngModel)="searchChange($event)" matInput placeholder="Placeholder">
+        <input [(ngModel)]="search" (ngModelChange)="searchChange($event)" matInput placeholder="Placeholder">
         <button matSuffix mat-icon-button>
           <mat-icon matSuffix>search</mat-icon>
         </button>
@@ -29,31 +17,31 @@
       <!-- Id Column -->
       <ng-container matColumnDef="raw">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>原始</th>
-        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.raw | mark: search"></span></td>
+        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.raw | mark: search"></div></td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>名称</th>
-        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.name | mark: search"></span></td>
+        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.name | mark: search"></div></td>
       </ng-container>
 
       <ng-container matColumnDef="intro">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
-        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.intro | mark: search"></span></td>
+        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.intro | mark: search"></div></td>
       </ng-container>
 
       <ng-container matColumnDef="namespace">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
-        <td mat-cell *matCellDef="let row"><span [innerHTML]="row.namespace | mark: search"></span></td>
+        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.namespace"></div></td>
       </ng-container>
 
       <ng-container matColumnDef="links">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>连接</th>
-        <td mat-cell *matCellDef="let row">{{row.links}}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>链接</th>
+        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.namespace"></div></td>
       </ng-container>
 
       <ng-container matColumnDef="handle">
-        <th mat-header-cell *matHeaderCellDef style="width:48px;">操作</th>
+        <th mat-header-cell *matHeaderCellDef style="width:40px;"></th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button [matMenuTriggerFor]="handleMenu" [matMenuTriggerData]="{key: row}">
             <mat-icon>more_vert</mat-icon>
@@ -70,3 +58,16 @@
     </div>
   </div>
 </div>
+
+<mat-menu #handleMenu="matMenu" xPosition="before">
+  <ng-template matMenuContent let-key="key">
+    <button routerLink="/edit/{{key.namespace}}/{{key.raw}}" mat-menu-item>
+      <mat-icon>edit</mat-icon>
+      <span>编辑</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>delete</mat-icon>
+      <span>删除</span>
+    </button>
+  </ng-template>
+</mat-menu>
