--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -3,6 +3,8 @@
   margin: 40px auto
 table
   width: 100%
+  .mat-cell > div
+    padding: 4px 8px 4px 0
 div.spinner
   padding: 120px
   mat-spinner
