--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/theming';
+@import '~@angular/material/theming'
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -10,7 +10,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-lime);
+$candy-app-primary: mat-palette($mat-deep-purple);
 $candy-app-accent:  mat-palette($mat-deep-purple, A700, A600, A900);
 
 // The warn palette is optional (defaults to red).
