--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -2,42 +2,59 @@
   <div class="mat-elevation-z8">
     <header>
       <mat-form-field appearance="legacy" floatLabel="never">
-        <mat-label>搜索</mat-label>
+        <mat-label>
+          <mat-icon matPrefix>search</mat-icon> 搜索
+        </mat-label>
         <input [(ngModel)]="search" (ngModelChange)="searchChange($event)" matInput placeholder="Placeholder">
-        <button matSuffix mat-icon-button>
-          <mat-icon matSuffix>search</mat-icon>
-        </button>
       </mat-form-field>
+      <mat-chip-list class="filter-list">
+        <mat-chip *ngIf="nsFilter | async" [removable]="true" [selectable]="false" (removed)="clearNsFilter()">
+          命名空间：{{nsFilter | async}}
+          <mat-icon matChipRemove>cancel</mat-icon>
+        </mat-chip>
+      </mat-chip-list>
       <span style="flex: 1 1 auto;"></span>
-      <mat-paginator #paginator [length]="tags.length" [pageIndex]="0" [pageSize]="50"
-        [pageSizeOptions]="[25, 50, 100, 250]">
+      <mat-paginator #paginator [length]="(filteredTags | async)?.length" [pageIndex]="0" [pageSize]="10"
+        [pageSizeOptions]="[10, 25, 50, 100]">
       </mat-paginator>
     </header>
-    <table mat-table [dataSource]="dataSource" matSort aria-label="Elements">
+    <table mat-table [dataSource]="pagedTags" matSort aria-label="Elements">
       <!-- Id Column -->
       <ng-container matColumnDef="raw">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>原始</th>
-        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.raw | mark: search"></div></td>
+        <td mat-cell *matCellDef="let row">
+          <div [innerHTML]="row.raw | mark: search"></div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>名称</th>
-        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.name | mark: search"></div></td>
+        <td mat-cell *matCellDef="let row">
+          <div [innerHTML]="row.name | mark: search"></div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="intro">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
-        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.intro | mark: search"></div></td>
+        <td mat-cell *matCellDef="let row">
+          <div [innerHTML]="row.intro | mark: search"></div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="namespace">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
-        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.namespace"></div></td>
+        <td mat-cell *matCellDef="let row">
+          <div>
+            <a [routerLink]="[ '/list', row.namespace ]">{{row.namespace}}</a>
+          </div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="links">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>链接</th>
-        <td mat-cell *matCellDef="let row"><div [innerHTML]="row.namespace"></div></td>
+        <td mat-cell *matCellDef="let row">
+          <div>{{row.links}}</div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="handle">
@@ -49,9 +66,8 @@
         </td>
       </ng-container>
 
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns | async"></tr>
+      <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
     </table>
     <div class="spinner" *ngIf="loading">
       <mat-spinner></mat-spinner>
@@ -61,7 +77,7 @@
 
 <mat-menu #handleMenu="matMenu" xPosition="before">
   <ng-template matMenuContent let-key="key">
-    <button routerLink="/edit/{{key.namespace}}/{{key.raw}}" mat-menu-item>
+    <button [routerLink]="[ '/edit', key.namespace, key.raw ]" mat-menu-item>
       <mat-icon>edit</mat-icon>
       <span>编辑</span>
     </button>
