--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -4,7 +4,7 @@
 table
   width: 100%
   .mat-cell > div
-    padding: 4px 8px 4px 0
+    padding: 0 8px 0 0
 div.spinner
   padding: 120px
   mat-spinner
