--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -21,23 +21,23 @@
     <table mat-table [dataSource]="pagedTags" matSort aria-label="Elements">
       <!-- Id Column -->
       <ng-container matColumnDef="raw">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>原始</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">原始</th>
         <td mat-cell *matCellDef="let row">
           <div [innerHTML]="row.raw | mark: search"></div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>名称</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">名称</th>
         <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.name | mark: search"></div>
+          <div [innerHTML]="row.renderedName | mark: search: true"></div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="intro">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
         <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.intro | mark: search"></div>
+          <div [innerHTML]="row.renderedIntro | mark: search: true"></div>
         </td>
       </ng-container>
 
@@ -53,7 +53,7 @@
       <ng-container matColumnDef="links">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>链接</th>
         <td mat-cell *matCellDef="let row">
-          <div>{{row.links}}</div>
+          <div [innerHTML]="row.renderedLinks"></div>
         </td>
       </ng-container>
 
