--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,9 @@
-<button mat-button *ngIf="user; else noUser" [matMenuTriggerFor]="userMenu">
+<button class="user-button" mat-button *ngIf="user; else noUser" [matMenuTriggerFor]="userMenu">
   <img [src]="user?.avatar_url" />
   <span>{{user?.name}}</span>
 </button>
 <ng-template #noUser>
-  <button mat-button (click)="logIn()">登录</button>
+  <button class="user-button" mat-button (click)="logIn()">登录</button>
 </ng-template>
 
 <mat-menu #userMenu="matMenu" xPosition="before">
