--- a/src/styles.sass
+++ b/src/styles.sass
@@ -34,3 +34,7 @@ a
   &:hover
     text-decoration: underline
     color: mat-color(map-get($candy-app-theme, accent))
+img[ehimg]
+  border: transparent solid
+  &[nsfw]
+    border: red solid
