add some user-select: none

--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -9,12 +9,14 @@ table
   td p
     margin: 4px 0
 div.spinner
+  user-select: none
   padding: 120px
   mat-spinner
     margin: auto
 .mat-toolbar
   background: white
 header
+  user-select: none
   font-size: 14px
   display: flex
   padding: 0 12px
