--- a/src/app/user/user.component.sass
+++ b/src/app/user/user.component.sass
@@ -1,6 +1,8 @@
+*
+  user-select: none
 button.user-button
-    height: 60px
+  height: 60px
 img
-    height: 32px
-    margin: 0 8px 0 0
-    border-radius: 5%
+  height: 32px
+  margin: 0 8px 0 0
+  border-radius: 5%
