--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,3 +1,54 @@
-<p>
-  editor works!
-</p>
+<div #root class="page-box mat-elevation-z8">
+  <div id="form-container">
+    <header>
+      <ng-container *ngIf="create | async; else editHeader">创建标签</ng-container>
+      <ng-template #editHeader>修改标签</ng-template>
+    </header>
+    <form [formGroup]="tagForm">
+      <mat-form-field>
+        <mat-label>命名空间</mat-label>
+        <mat-select formControlName="ns" required>
+          <mat-option *ngFor="let ns of nsOptions" [value]="ns">
+            {{ns}}
+          </mat-option>
+        </mat-select>
+        <mat-hint *ngIf="enabled('ns')">标签所在的命名空间</mat-hint>
+        <mat-hint *ngIf="!enabled('ns')">修改标签时无法更改此项</mat-hint>
+        <mat-error *ngIf="hasError('ns', 'editableNs')">该命名空间的标签暂不支持从此处修改，请<a
+            href="https://github.com/ehtagtranslation/Database/issues" target="_blank">提交 ISSUE 讨论</a>或<a
+            [href]="'https://github.com/ehtagtranslation/Database/' + value('ns')" target="_blank">通过 PR 修改</a>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>原始</mat-label>
+        <input matInput formControlName="raw" required />
+        <mat-hint *ngIf="enabled('raw')">输入原始的标签内容</mat-hint>
+        <mat-hint *ngIf="!enabled('raw')">修改标签时无法更改此项</mat-hint>
+        <mat-error *ngIf="hasError('raw', 'required')">必须填写</mat-error>
+        <mat-error *ngIf="hasError('raw', 'minlength', 'required')">至少包含两个字母
+        </mat-error>
+        <mat-error *ngIf="hasError('raw','pattern', [ 'minlength', 'required' ])">
+          不能以空格开始或结束</mat-error>
+        <mat-error *ngIf="hasError('raw', 'raw', [ 'pattern', 'minlength', 'required' ])">
+          只能包含字母、数字、空格、'.' 和 '-'</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>名称</mat-label>
+        <input matInput formControlName="text" required>
+        <mat-hint>输入标签的中文翻译</mat-hint>
+        <mat-error *ngIf="hasError('text', [ 'pattern', 'required' ])">必须填写</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>描述</mat-label>
+        <textarea matInput formControlName="intro"></textarea>
+        <mat-hint>输入标签的描述</mat-hint>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>链接</mat-label>
+        <textarea matInput formControlName="links"></textarea>
+        <mat-hint>输入标签的相关链接</mat-hint>
+      </mat-form-field>
+    </form>
+  </div>
+  <div id="preview-container"></div>
+</div>
