--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,99 +1,98 @@
-<div #root class="page-box">
-  <div class="mat-elevation-z8">
-    <header>
-      <mat-form-field>
-        <mat-label>
-          <mat-icon matPrefix>search</mat-icon>搜索
-        </mat-label>
-        <input [ngModel]="search | async" (ngModelChange)="navigateParam({search: $event, pageIndex: 0})" matInput
-          placeholder="string or /regex/" type="search">
-      </mat-form-field>
-      <mat-chip-list class="filter-list">
-        <mat-chip *ngIf="ns | async" [removable]="true" [selectable]="false" (removed)="setNs()">
-          命名空间：{{ns | async}}
-          <mat-icon matChipRemove>cancel</mat-icon>
-        </mat-chip>
-      </mat-chip-list>
-      <span style="flex: 1 1 auto;"></span>
-      <mat-form-field>
-        <mat-label>图片显示</mat-label>
-        <mat-select [ngModel]="showImg | async" (ngModelChange)="navigateParam({showImg: $event})">
-          <mat-option value="all">全部显示</mat-option>
-          <mat-option value="no-nsfw">隐藏 NSFW</mat-option>
-          <mat-option value="none">全部隐藏</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-paginator [length]="(filteredTags | async)?.length" [pageIndex]="pageIndex | async"
-        [pageSize]="pageSize | async" [pageSizeOptions]="[10, 25, 50, 100]"
-        (page)="navigateParam({ pageIndex: $event.pageIndex, pageSize: $event.pageSize })">
-      </mat-paginator>
-    </header>
-    <table mat-table [dataSource]="pagedTags" aria-label="Elements" matSort [matSortActive]="sortBy | async"
-      [matSortDirection]="sortDirection | async"
-      (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
-      <!-- Id Column -->
-      <ng-container matColumnDef="raw">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">原始</th>
-        <td mat-cell *matCellDef="let row">
-          <div>
-            <a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)"
-              [routerLink]="[ '/list', row.raw ]" replaceUrl [innerHTML]="row.raw | mark: (search | async)"></a>
-            <ng-template #notRow>
-              <span [innerHTML]="row.raw | mark: (search | async)"></span>
-            </ng-template>
-          </div>
-        </td>
-      </ng-container>
+<div #root class="page-box mat-elevation-z8">
+  <header>
+    <mat-form-field>
+      <mat-label>
+        <mat-icon matPrefix>search</mat-icon>搜索
+      </mat-label>
+      <input [ngModel]="search | async" (ngModelChange)="navigateParam({search: $event, pageIndex: 0})" matInput
+        placeholder="string or /regex/" type="search">
+    </mat-form-field>
+    <mat-chip-list class="filter-list">
+      <mat-chip *ngIf="ns | async" [removable]="true" [selectable]="false" (removed)="setNs()">
+        命名空间：{{ns | async}}
+        <mat-icon matChipRemove>cancel</mat-icon>
+      </mat-chip>
+    </mat-chip-list>
+    <span style="flex: 1 1 auto;"></span>
+    <mat-form-field style="width: 100px;">
+      <mat-label>图片显示</mat-label>
+      <mat-select [ngModel]="showImg | async" (ngModelChange)="navigateParam({showImg: $event})">
+        <mat-option value="all">全部显示</mat-option>
+        <mat-option value="no-nsfw">模糊 NSFW</mat-option>
+        <mat-option value="none">全部隐藏</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-paginator [length]="(filteredTags | async)?.length" [pageIndex]="pageIndex | async"
+      [pageSize]="pageSize | async" [pageSizeOptions]="[10, 25, 50, 100]"
+      (page)="navigateParam({ pageIndex: $event.pageIndex, pageSize: $event.pageSize })">
+    </mat-paginator>
+  </header>
+  <table mat-table [dataSource]="pagedTags" aria-label="Elements" matSort [matSortActive]="sortBy | async"
+    [matSortDirection]="sortDirection | async"
+    (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
+    <!-- Id Column -->
+    <ng-container matColumnDef="raw">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">原始</th>
+      <td mat-cell *matCellDef="let row">
+        <div>
+          <a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)" [routerLink]="[ '/list', row.raw ]"
+            replaceUrl [innerHTML]="row.raw | mark: (search | async)"></a>
+          <ng-template #notRow>
+            <span [innerHTML]="row.raw | mark: (search | async)"></span>
+          </ng-template>
+        </div>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">名称</th>
-        <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedName | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">名称</th>
+      <td mat-cell *matCellDef="let row">
+        <div [innerHTML]="row.renderedName | mark: (search | async): true"></div>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="intro">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
-        <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="intro">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
+      <td mat-cell *matCellDef="let row">
+        <div [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="namespace">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
-        <td mat-cell *matCellDef="let row">
-          <div>
-            <a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]" replaceUrl>{{row.namespace}}</a>
-          </div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="namespace">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
+      <td mat-cell *matCellDef="let row">
+        <div>
+          <a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]" replaceUrl>{{row.namespace}}</a>
+        </div>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="links">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">链接</th>
-        <td mat-cell *matCellDef="let row">
-          <div [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="links">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">链接</th>
+      <td mat-cell *matCellDef="let row">
+        <div [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="handle">
-        <th mat-header-cell *matHeaderCellDef style="width:40px;">
-          <button matTooltip="新增" matTooltipPosition="left" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
-            [routerLink]="[ '/edit', ((ns | async) || 'aritst'), '*new' ]">
-            <mat-icon>add_circle</mat-icon>
-          </button></th>
-        <td mat-cell *matCellDef="let row">
-          <button matTooltip="编辑" matTooltipPosition="left" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
-            [routerLink]="[ '/edit', row.namespace, row.raw ]">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="handle">
+      <th mat-header-cell *matHeaderCellDef style="width:40px;">
+        <button matTooltip="新增" matTooltipPosition="left" matTooltipShowDelay="500" mat-icon-button class="mat-accent"
+          [routerLink]="[ '/edit', ((ns | async) || 'aritst'), '*new' ]">
+          <mat-icon>add_circle</mat-icon>
+        </button></th>
+      <td mat-cell *matCellDef="let row">
+        <button *ngIf="editableNs.indexOf(row.namespace) > 0" matTooltip="编辑" matTooltipPosition="left"
+          matTooltipShowDelay="500" mat-icon-button class="mat-accent"
+          [routerLink]="[ '/edit', row.namespace, row.raw ]">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns | async"></tr>
-      <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
-    </table>
-    <div class="spinner" *ngIf="loading">
-      <mat-spinner></mat-spinner>
-    </div>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns | async"></tr>
+    <tr mat-row *matRowDef="let row; columns: (displayedColumns | async);"></tr>
+  </table>
+  <div class="spinner" *ngIf="loading">
+    <mat-spinner></mat-spinner>
   </div>
 </div>
