--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -12,6 +12,8 @@ header
 
 table
   width: 100%
+  th.text
+    min-width: 80px
   .mat-header-cell:not(:last-child), .mat-cell:not(:last-child)
     padding-right: 8px
   td p
