--- a/src/styles.sass
+++ b/src/styles.sass
@@ -24,6 +24,8 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // that you are using.
 @include angular-material-theme($candy-app-theme)
 
+@import '~material-design-icons/iconfont/material-icons.css'
+
 html
   font-family: "Noto Sans", Arial, Helvetica, "Noto Sans CJK SC", "Microsoft Yahei UI", sans-serif 
 a
@@ -41,4 +43,4 @@ img[ehimg]
 
 div.page-box
   max-width: 90%
-  margin: 40px auto
+  margin: 32px auto 12px
