--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,21 +1,41 @@
 
 .page-box
-  position: relative
-  #form-container
-    width: 50%
-    form
-      padding: 6px
-      user-select: none
-      input
-        user-select: auto
-      mat-form-field
-        display: block
-        margin: 18px
+  padding: 6px
+  header
+    user-select: none
+    margin: 18px
+    font-size: 24px
+  section
+    position: relative
+    #form-container
+      width: 50%
+      form
+        user-select: none
+        mat-form-field
+          &.markdown mat-label::after
+            background-image: url('https://unpkg.com/simple-icons@latest/icons/markdown.svg')
+            display: inline-block
+            width: 1em
+            height: 1em
+            margin-left: 0.2em
+            content: ''
+          display: block
+          margin: 18px
 
-  #preview-container
-    background: blue
-    width: 50%
-    height: 100%
-    position: absolute
-    right: 0
-    top: 0
+    #preview-container
+      $spaceing: 18px
+      width: 50%
+      top: -$spaceing
+      height: calc(100% + #{$spaceing} * 2)
+      position: absolute
+      right: 0
+      mat-card
+        margin: $spaceing
+        mat-card-subtitle
+          user-select: none
+
+  footer
+    margin: 12px
+    text-align: right
+    button
+      margin: 6px
