--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -32,7 +32,7 @@
     (matSortChange)="navigateParam({ sortBy: $event.active, sortDirection: $event.direction })">
     <!-- Id Column -->
     <ng-container matColumnDef="raw">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">原始</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">原始</th>
       <td mat-cell *matCellDef="let row">
         <div>
           <a *ngIf="row.namespace === 'rows'; else notRow;" (click)="setNs(row.raw)" [routerLink]="[ '/list', row.raw ]"
@@ -45,21 +45,21 @@
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">名称</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">名称</th>
       <td mat-cell *matCellDef="let row">
         <div [innerHTML]="row.renderedName | mark: (search | async): true"></div>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="intro">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>描述</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">描述</th>
       <td mat-cell *matCellDef="let row">
         <div [innerHTML]="row.renderedIntro | mark: (search | async): true"></div>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="namespace">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:80px;">命名空间</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text">命名空间</th>
       <td mat-cell *matCellDef="let row">
         <div>
           <a (click)="setNs(row.namespace)" [routerLink]="[ '/list', row.namespace ]" replaceUrl>{{row.namespace}}</a>
@@ -68,7 +68,7 @@
     </ng-container>
 
     <ng-container matColumnDef="links">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header style="min-width:80px;">链接</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header  class="text">链接</th>
       <td mat-cell *matCellDef="let row">
         <div [innerHTML]="row.renderedLinks | mark: (search | async): true"></div>
       </td>
@@ -81,9 +81,9 @@
           <mat-icon>add_circle</mat-icon>
         </button></th>
       <td mat-cell *matCellDef="let row">
-        <button *ngIf="editableNs.indexOf(row.namespace) > 0" matTooltip="编辑" matTooltipPosition="left"
+        <button [disabled]="editableNs.indexOf(row.namespace) < 0" [matTooltip]="(editableNs.indexOf(row.namespace) < 0) ? '该命名空间的标签暂不支持从此处修改，请提交 ISSUE 讨论或通过 PR 修改' : '编辑'" matTooltipPosition="left"
           matTooltipShowDelay="500" mat-icon-button class="mat-accent"
-          [routerLink]="[ '/edit', row.namespace, row.raw ]">
+          [routerLink]="[ '/edit', row.namespace, row.raw ]" [queryParams]="{ name: row.name, intro: row.intro, links: row.links }">
           <mat-icon>edit</mat-icon>
         </button>
       </td>
