--- a/src/styles.sass
+++ b/src/styles.sass
@@ -11,7 +11,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($mat-deep-purple);
-$candy-app-accent:  mat-palette($mat-deep-purple, A700, A600, A900);
+$candy-app-accent:  mat-palette($mat-purple, A700, A600, A900);
 
 // The warn palette is optional (defaults to red).
 $candy-app-warn:    mat-palette($mat-red);
