--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -9,6 +9,11 @@ header
   > mat-chip-list
     margin: auto 12px
     padding-top: 12px
+  #search
+    .mat-hint
+      display: inline-block
+      width: 20px
+      text-align: right
 
 table
   width: 100%
