--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
         <mat-icon matPrefix>search</mat-icon>搜索
       </mat-label>
       <input [ngModel]="search | async" (ngModelChange)="navigateParam({search: $event, pageIndex: 0})" matInput
-        placeholder="string or /regex/" type="search">
+        placeholder="string or /regex/" type="search" autocomplete="off">
       <span *ngIf="(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用正则表达式进行匹配"
         matTooltipPosition="above">.*</span>
       <span *ngIf="!(usingRegex | async) && (search | async)" matSuffix class="mat-hint" matTooltip="正在使用普通文本进行匹配"
