--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -2,6 +2,14 @@
   <header>
     <ng-container *ngIf="create | async; else editHeader">创建标签</ng-container>
     <ng-template #editHeader>修改标签</ng-template>
+    <span style="flex: 1 1 auto;"></span>
+    <button mat-flat-button [disabled]="(rendered.loading | async)" (click)="preview()">
+      <ng-container *ngIf="!(rendered.loading | async); else rendering">预览</ng-container>
+      <ng-template #rendering>
+        <mat-spinner class="loading" [diameter]="24"></mat-spinner>
+      </ng-template>
+    </button>
+    <button mat-flat-button color="accent">提交</button>
   </header>
   <section>
     <div id="form-container">
@@ -42,35 +50,41 @@
         </mat-form-field>
         <mat-form-field class="markdown">
           <mat-label>描述</mat-label>
-          <textarea matInput formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2"
-            cdkAutosizeMaxRows="5"></textarea>
+          <textarea matInput formControlName="intro" cdkTextareaAutosize cdkAutosizeMinRows="2"></textarea>
           <mat-hint>输入标签的描述</mat-hint>
         </mat-form-field>
         <mat-form-field class="markdown">
           <mat-label>链接</mat-label>
-          <textarea matInput formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2"
-            cdkAutosizeMaxRows="5"></textarea>
+          <textarea matInput formControlName="links" cdkTextareaAutosize cdkAutosizeMinRows="2"></textarea>
           <mat-hint>输入标签的相关链接</mat-hint>
         </mat-form-field>
       </form>
     </div>
     <div id="preview-container">
+      <div id="preview-row1">
+        <mat-card>
+          <mat-card-subtitle>原始</mat-card-subtitle>
+          <mat-card-content [innerHtml]="inputs.raw | async"></mat-card-content>
+        </mat-card>
+        <mat-card>
+          <mat-card-subtitle>名称
+            <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
+          </mat-card-subtitle>
+          <mat-card-content [innerHtml]="rendered.name | async | mark: '': true"></mat-card-content>
+        </mat-card>
+      </div>
       <mat-card>
-        <mat-card-subtitle>名称</mat-card-subtitle>
-        <mat-card-content></mat-card-content>
+        <mat-card-subtitle>描述
+          <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
+        </mat-card-subtitle>
+        <mat-card-content [innerHtml]="rendered.intro | async | mark: '': true"></mat-card-content>
       </mat-card>
       <mat-card>
-        <mat-card-subtitle>描述</mat-card-subtitle>
-        <mat-card-content></mat-card-content>
-      </mat-card>
-      <mat-card>
-        <mat-card-subtitle>链接</mat-card-subtitle>
-        <mat-card-content></mat-card-content>
+        <mat-card-subtitle>链接
+          <mat-spinner *ngIf="rendered.loading | async" class="loading" [diameter]="14"></mat-spinner>
+        </mat-card-subtitle>
+        <mat-card-content [innerHtml]="rendered.links | async | mark: '': true"></mat-card-content>
       </mat-card>
     </div>
   </section>
-  <footer>
-    <button mat-flat-button>预览</button>
-    <button mat-flat-button color="accent">提交</button>
-  </footer>
 </div>
